[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-pmda"
description = "Client library for the CA Performance Management Data Aggregator data-driven API."
version = "1.0.0"
requires-python = ">= 3.9"
dependencies = [
    "requests"
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.setuptools]
py-modules = [
    "ca_pmda"
]